--- a/package.json
+++ b/package.json
@@ -3,20 +3,23 @@
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
-    "build": "tsc index.ts",
-    "dev": "nodemon index.ts",
+    "build": "tsc",
+    "dev": "tsx watch ./index.ts",
+    "start": "npx prisma generate && tsx ./index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
+
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.8",
     "prisma": "^5.13.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "tsx": "^4.10.0"
   },
   "dependencies": {
     "@prisma/client": "^5.13.0",
