--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
   "author": "",
   "license": "ISC",
   "description": "",
-
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.8",
     "prisma": "^5.13.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5",
-    "tsx": "^4.10.0"
+    "tsx": "^4.10.0",
+    "typescript": "^5.4.5"
   },
   "dependencies": {
     "@prisma/client": "^5.13.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2"
